fix(general): fix zenscroll and import collapse

--- a/src/components/static-content/validatore/Validatore.css
+++ b/src/components/static-content/validatore/Validatore.css
@@ -84,6 +84,6 @@
   background: linear-gradient(to bottom, #f0f6fc 35rem, white 0);
 }
 
-.card::after {
+#cardValidator::after {
   margin-top: 0;
 }
